# opencv-retake-Totodore

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: application.cpp  application.hpp  main.cpp
src/modules/: module.hpp  resize_module.cpp  resize_module.hpp
